more rename purchase and debuggig
