# app/src/controllers/purchaseListController.js
@@ -1,12 +1,10 @@
-"use strict";
-
 module.exports = function(rsRepository, logger) {
 
     var fetchPurchases = async function (ctx) {
         logger.debug("arrived at sessionsPurchaseList.fetchPurchases");
 
         try {
-            let sql = `SELECT * from "purchase" where "clientId" = ${ctx.params.id};`;
+            let sql = `SELECT * from "purchases" where "client" = '${ctx.params.id}';`;
             var query = await rsRepository.query(sql);
         } catch (ex) {
             throw ex;
@@ -14,6 +12,7 @@ module.exports = function(rsRepository, logger) {
 
         ctx.body = {purchases: query};
         ctx.status = 200;
+        return ctx;
     };
 
     return {
